处理导航栏

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ text-underline-position: from-font;
                     </div>
                     <div
                       id="navbar"
-                      class="collapse navbar-collapse navigation-holder"
+                      class=" navbar-collapse navigation-holder"
                     >
                       <button class="menu-close">
                         <i class="ti-close"></i>
