导航栏不换行

--- a/blog.html
+++ b/blog.html
@@ -156,6 +156,9 @@
         line-height: 24px; /* 150% */
         padding-left: 40px;
       }
+      .nav {
+        flex-wrap: nowrap !important;
+      }
     </style>
   </head>
 
