--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,9 @@
         flex-direction: column;
         z-index: 1;
       }
+      .nav{
+        flex-wrap: nowrap !important;
+      }
     </style>
   </head>
 
