--- a/index.html
+++ b/index.html
@@ -324,6 +324,20 @@ text-underline-position: from-font;
         font-weight: 600;
         line-height: 22px;
       }
+
+      /* 首页专用 - Footer文字样式 */
+      .wpo-service-link-widget-text {
+        color: var(--text-icon-font-wh-255, rgba(255, 255, 255, 0.55));
+        color: var(--text-icon-font-wh-255, color(display-p3 1 1 1 / 0.55));
+        font-family: "PingFang SC";
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 22px;
+      }
+      .nav{
+        flex-wrap: nowrap !important;
+      }
     </style>
   </head>
 
@@ -349,12 +363,12 @@ text-underline-position: from-font;
                     </div>
                     <div
                       id="navbar"
-                      class=" navbar-collapse navigation-holder"
+                      class="collapse navbar-collapse navigation-holder"
                     >
                       <button class="menu-close">
                         <i class="ti-close"></i>
                       </button>
-                      <ul class="nav navbar-nav mb-2 mb-lg-0">
+                      <ul  class="nav navbar-nav mb-2 mb-lg-0">
                         <li class="menu-item-has-children">
                           <a class="active" href="#">首页</a>
                         </li>
