--- a/project.html
+++ b/project.html
@@ -567,6 +567,9 @@
           max-width: 100%;
         }
       }
+      .nav{
+        flex-wrap: nowrap !important;
+      }
     </style>
   </head>
 
