--- a/service.html
+++ b/service.html
@@ -511,6 +511,9 @@
     display: block;
     border-bottom: 2px solid #e0d7c6; /* 木质分割线 */
     }
+    .nav{
+        flex-wrap: nowrap !important;
+      }
     </style>
   </head>
 
