--- a/index.html
+++ b/index.html
@@ -363,14 +363,14 @@ text-underline-position: from-font;
                           <div class="col-lg-9 col-md-9 col-9">
                               <div class="navbar-wrap">
                                   <div class="navbar-header">
-                                      <a class="navbar-brand logo" href="index.html"><img src="assets/images/世界道地中药峰会LOGO_svg 1.svg"
+                                      <a class="navbar-brand logo" href="index.html"><img src="assets/images/世界道地中药峰会LOGO_white.svg"
                                               alt="">世界道地中药峰会</a>
                                   </div>
                                   <div id="navbar" class="collapse navbar-collapse navigation-holder">
                                       <button class="menu-close"><i class="ti-close"></i></button>
                                       <ul class="nav navbar-nav mb-2 mb-lg-0">
                                           <li>
-                                              <a class="active" href="#">首页</a>
+                                              <a class="active" href="index.html">首页</a>
                                               
                                           </li>
                                           <li><a href="about.html">关于我们</a></li>
