--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@ text-underline-position: from-font;
                   </div>
                   <div class="wpo-blog-content">
                     <h2 style="text-align: center;">
-                      <a href="blog-single.html" class="wpo-blog-little-title"
+                      <a href="service.html" class="wpo-blog-little-title"
                         >匠心高质量标准</a
                       >
                     </h2>
