完成联系我们页面

--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,9 @@
       .nav {
         flex-wrap: nowrap !important;
       }
+      .icon img {
+        padding-bottom: 20px;
+      }
     </style>
   </head>
 
@@ -84,7 +87,7 @@
                     <div class="navbar-header">
                       <a class="navbar-brand logo" href="index.html"
                         ><img
-                        src="assets/images/世界道地中药峰会LOGO_blue.svg"
+                          src="assets/images/世界道地中药峰会LOGO_blue.svg"
                           alt=""
                         />世界道地中药峰会</a
                       >
@@ -98,7 +101,7 @@
                       </button>
                       <ul class="nav navbar-nav mb-2 mb-lg-0">
                         <li>
-                            <a href="index.html">首页</a>
+                          <a href="index.html">首页</a>
                         </li>
                         <li><a href="about.html">关于我们</a></li>
                         <li>
@@ -158,12 +161,15 @@
                     <div class="office-info-item">
                       <div class="office-info-icon">
                         <div class="icon">
-                          <i class="fi flaticon-location"></i>
+                          <img
+                            src="assets/images/Contact/section1_1.svg"
+                            alt=""
+                          />
                         </div>
                       </div>
                       <div class="office-info-text">
-                        <h2>Address</h2>
-                        <p>7 Green Lake Street Crawfordsville, IN 47933</p>
+                        <h2>地址</h2>
+                        <p>光明街道光明南街10号长丰酒店底</p>
                       </div>
                     </div>
                   </div>
@@ -171,13 +177,16 @@
                     <div class="office-info-item">
                       <div class="office-info-icon">
                         <div class="icon">
-                          <i class="fi flaticon-email"></i>
+                          <img
+                            src="assets/images/Contact/section1_2.svg"
+                            alt=""
+                          />
                         </div>
                       </div>
                       <div class="office-info-text">
-                        <h2>Email Us</h2>
-                        <p>Indudus@gmail.com</p>
-                        <p>helloyou@gmail.com</p>
+                        <h2>给我们发电子邮件</h2>
+                        <p>12345678@gmail.com</p>
+                        <p>12345678@gmail.com</p>
                       </div>
                     </div>
                   </div>
@@ -185,13 +194,16 @@
                     <div class="office-info-item">
                       <div class="office-info-icon">
                         <div class="icon">
-                          <i class="fi flaticon-telephone"></i>
+                          <img
+                            src="assets/images/Contact/section1_3.svg"
+                            alt=""
+                          />
                         </div>
                       </div>
                       <div class="office-info-text">
-                        <h2>Call Now</h2>
-                        <p>+1 800 123 456 789</p>
-                        <p>+1 800 123 654 987</p>
+                        <h2>立即致电</h2>
+                        <p>+00 188 888 888 888</p>
+                        <p>+00 188 888 888 888</p>
                       </div>
                     </div>
                   </div>
