--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@ text-underline-position: from-font;
                   </div>
                   <div class="wpo-blog-content">
                     <h2 style="text-align: center;">
-                      <a href="blog-single.html" class="wpo-blog-little-title"
+                      <a href="project.html" class="wpo-blog-little-title"
                         >生态公益</a
                       >
                     </h2>
@@ -540,7 +540,7 @@ text-underline-position: from-font;
                   </div>
                   <div class="wpo-blog-content">
                     <h2 style="text-align: center;">
-                      <a href="blog-single.html" class="wpo-blog-little-title"
+                      <a href="blog.html" class="wpo-blog-little-title"
                         >全链条整合</a
                       >
                     </h2>
