新闻中心相关的跳转

--- a/contact.html
+++ b/contact.html
@@ -114,7 +114,7 @@
                           <a href="blog.html">合作与加入</a>
                         </li>
                         <li>
-                          <a href="#">新闻中心</a>
+                          <a href="news.html">新闻中心</a>
                         </li>
                         <li>
                           <a class="active" href="contact.html">联系我们</a>
@@ -295,7 +295,7 @@
                   <div class="logo widget-title">
                     <a class="logo" href="index.html">
                       <img
-                        src="assets/images/世界道地中药峰会LOGO_svg 1.svg"
+                      src="assets/images/世界道地中药峰会LOGO_white.svg"
                         alt=""
                       />
                     </a>
