--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@ text-underline-position: from-font;
                                              
                                           </li>
                                           <li>
-                                              <a href="#">新闻中心</a>
+                                              <a href="news.html">新闻中心</a>
                                           </li>
                                           <li><a href="contact.html">联系我们</a></li>
                                       </ul>
@@ -709,7 +709,7 @@ text-underline-position: from-font;
                   <div class="logo widget-title">
                     <a class="logo" href="index.html">
                       <img
-                      src="assets/images/世界道地中药峰会LOGO_svg 1.svg"
+                      src="assets/images/世界道地中药峰会LOGO_white.svg"
                       alt=""
                     />
                     </a>
