--- a/news.html
+++ b/news.html
@@ -29,6 +29,83 @@
     <link href="assets/sass/style.css" rel="stylesheet" />
     <!-- 可复用样式文件 -->
     <link href="assets/mycss/Reuse.css" rel="stylesheet" />
+    <style>
+      .wpo-page-title {
+        background: url(assets/images/News/page_title.jpg) no-repeat center;
+        background-size: 100% 100%;
+        min-height: 450px;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        z-index: 1;
+      }
+      .wpo-news-section .news-list {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr); /* 3列 */
+        grid-template-rows: repeat(4, 1fr); /* 4行 */
+        gap: 15px; /* 间距 */
+        /* max-width: 1200px; */
+        margin: 0 auto;
+      }
+      .wpo-news-section .news-list .news-item {
+        border-radius: 12px;
+        border: 1px solid #e8e8e8;
+        overflow: hidden;
+        margin-bottom: 24px;
+        background: #ffffff;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
+        transition: box-shadow 0.2s ease;
+      }
+
+      .wpo-news-section .news-list .news-item:hover {
+        box-shadow: 0 4px 16px rgba(0, 0, 0, 0.08);
+      }
+
+      .wpo-news-section .news-list .news-item img {
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+        display: block;
+      }
+      .wpo-news-section .news-list .news-item .news-content {
+        /* 外层容器：只负责内边距和边框 */
+        padding: 24px;
+        background: #ffffff;
+        border-top: 1px solid #f0f0f0;
+      }
+
+      .wpo-news-section .news-list .news-item .news-content .news-text {
+        /* 内层容器：负责文字样式和截断 */
+        color: var(--text-icon-font-gy-190-primary, rgba(0, 0, 0, 0.9));
+        color: var(
+          --text-icon-font-gy-190-primary,
+          color(display-p3 0 0 0 / 0.9)
+        );
+        font-family: "PingFang SC";
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 1.5;
+
+        /* 文本截断 - 确保只显示2行 */
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+
+        /* 文字换行设置 */
+        word-wrap: break-word;
+        word-break: break-word;
+        white-space: normal;
+
+        /* 重要：确保内层容器不会超出 */
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
 
   <body>
@@ -89,13 +166,13 @@
                           <a href="service.html">标准与理念</a>
                         </li>
                         <li>
-                          <ahref="project.html">生态公益</a>
+                          <a href="project.html">生态公益</a>
                         </li>
                         <li>
                           <a href="blog.html">合作与加入</a>
                         </li>
                         <li>
-                          <a  class="active" href="news.html">新闻中心</a>
+                          <a class="active" href="news.html">新闻中心</a>
                         </li>
                         <li><a href="contact.html">联系我们</a></li>
                       </ul>
@@ -111,15 +188,14 @@
       </header>
       <!-- end of header -->
       <!-- start wpo-page-title -->
-      <section class="wpo-page-title">
+      <section class="wpo-page-title" style="margin-top: 100px">
         <div class="container">
           <div class="row">
             <div class="col col-xs-12">
               <div class="wpo-breadcumb-wrap">
-                <h2>Pricing Plan</h2>
+                <h2>新闻中心</h2>
                 <ol class="wpo-breadcumb-wrap">
-                  <li><a href="index.html">Home</a></li>
-                  <li>Pricing</li>
+                  <li>phase center</li>
                 </ol>
               </div>
             </div>
@@ -129,99 +205,103 @@
         <!-- end container -->
       </section>
       <!-- end page-title -->
-      <!-- start wpo-pricing-section -->
-      <section class="wpo-pricing-section section-padding">
+      <!-- start wpo-news-section -->
+      <section class="wpo-news-section section-padding">
         <div class="container">
-          <div class="row">
-            <div class="wpo-section-title">
-              <p>Pricing Plan</p>
-              <h2>Choose Your Optimal <span>Plan</span></h2>
+          <div class="news-list">
+            <div class="news-item">
+              <img src="assets/images/News/占位图.jpg" alt="" />
+              <div class="news-content">
+                <div class="news-text">
+                  新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="wpo-pricing-wrap">
-            <div class="row">
-              <div class="col col-lg-4 col-md-6 col-12">
-                <div class="wpo-pricing-item">
-                  <div class="wpo-pricing-top">
-                    <div class="pricing-thumb">
-                      <span>Basic</span>
-                    </div>
-                    <div class="wpo-pricing-text">
-                      <h2>$120<span>/per m²</span></h2>
-                      <p>
-                        Industries represents the way to feel happy and
-                        complete.
-                      </p>
-                    </div>
-                  </div>
-                  <div class="wpo-pricing-bottom">
-                    <div class="wpo-pricing-bottom-text">
-                      <ul>
-                        <li>General living space advices</li>
-                        <li>Complete Petroleum Refinery</li>
-                        <li>Modern Industries planning</li>
-                        <li>Industries design advices</li>
-                        <li>Power & Engergy</li>
-                      </ul>
-                      <a href="pricing.html">CHOOSE PLAN</a>
-                    </div>
-                  </div>
+            <div class="news-item">
+              <img src="assets/images/News/占位图.jpg" alt="" />
+              <div class="news-content">
+                <div class="news-text">
+                  新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称
                 </div>
               </div>
-              <div class="col col-lg-4 col-md-6 col-12">
-                <div class="wpo-pricing-item">
-                  <div class="wpo-pricing-top">
-                    <div class="pricing-thumb">
-                      <span>Premium</span>
-                    </div>
-                    <div class="wpo-pricing-text">
-                      <h2>$210<span>/per m²</span></h2>
-                      <p>
-                        Industries represents the way to feel happy and
-                        complete.
-                      </p>
-                    </div>
-                  </div>
-                  <div class="wpo-pricing-bottom">
-                    <div class="wpo-pricing-bottom-text">
-                      <ul>
-                        <li>General living space advices</li>
-                        <li>Complete Petroleum Refinery</li>
-                        <li>Modern Industries planning</li>
-                        <li>Industries design advices</li>
-                        <li>Power & Engergy</li>
-                      </ul>
-                      <a href="pricing.html">CHOOSE PLAN</a>
-                    </div>
-                  </div>
+            </div>
+            <div class="news-item">
+              <img src="assets/images/News/占位图.jpg" alt="" />
+              <div class="news-content">
+                <div class="news-text">
+                  新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称
                 </div>
               </div>
-              <div class="col col-lg-4 col-md-6 col-12">
-                <div class="wpo-pricing-item">
-                  <div class="wpo-pricing-top">
-                    <div class="pricing-thumb">
-                      <span>Advanced</span>
-                    </div>
-                    <div class="wpo-pricing-text">
-                      <h2>$373<span>/per m²</span></h2>
-                      <p>
-                        Industries represents the way to feel happy and
-                        complete.
-                      </p>
-                    </div>
-                  </div>
-                  <div class="wpo-pricing-bottom">
-                    <div class="wpo-pricing-bottom-text">
-                      <ul>
-                        <li>General living space advices</li>
-                        <li>Complete Petroleum Refinery</li>
-                        <li>Modern Industries planning</li>
-                        <li>Industries design advices</li>
-                        <li>Power & Engergy</li>
-                      </ul>
-                      <a href="pricing.html">CHOOSE PLAN</a>
-                    </div>
-                  </div>
+            </div>
+            <div class="news-item">
+              <img src="assets/images/News/占位图.jpg" alt="" />
+              <div class="news-content">
+                <div class="news-text">
+                  新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称
+                </div>
+              </div>
+            </div>
+            <div class="news-item">
+              <img src="assets/images/News/占位图.jpg" alt="" />
+              <div class="news-content">
+                <div class="news-text">
+                  新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称
+                </div>
+              </div>
+            </div>
+            <div class="news-item">
+              <img src="assets/images/News/占位图.jpg" alt="" />
+              <div class="news-content">
+                <div class="news-text">
+                  新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称
+                </div>
+              </div>
+            </div>
+            <div class="news-item">
+              <img src="assets/images/News/占位图.jpg" alt="" />
+              <div class="news-content">
+                <div class="news-text">
+                  新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称
+                </div>
+              </div>
+            </div>
+            <div class="news-item">
+              <img src="assets/images/News/占位图.jpg" alt="" />
+              <div class="news-content">
+                <div class="news-text">
+                  新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称
+                </div>
+              </div>
+            </div>
+            <div class="news-item">
+              <img src="assets/images/News/占位图.jpg" alt="" />
+              <div class="news-content">
+                <div class="news-text">
+                  新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称
+                </div>
+              </div>
+            </div>
+            <div class="news-item">
+              <img src="assets/images/News/占位图.jpg" alt="" />
+              <div class="news-content">
+                <div class="news-text">
+                  新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称
+                </div>
+              </div>
+            </div>
+            <div class="news-item">
+              <img src="assets/images/News/占位图.jpg" alt="" />
+              <div class="news-content">
+                <div class="news-text">
+                  新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称
+                </div>
+              </div>
+            </div>
+            <div class="news-item">
+              <img src="assets/images/News/占位图.jpg" alt="" />
+              <div class="news-content">
+                <div class="news-text">
+                  新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称新闻内容名称
                 </div>
               </div>
             </div>
@@ -229,7 +309,7 @@
         </div>
         <!-- end container -->
       </section>
-      <!-- end wpo-pricing-section -->
+      <!-- end wpo-news-section -->
       <!-- start of wpo-site-footer-section -->
       <footer class="wpo-site-footer">
         <div class="wpo-upper-footer">
@@ -240,7 +320,7 @@
                   <div class="logo widget-title">
                     <a class="logo" href="index.html">
                       <img
-                      src="assets/images/世界道地中药峰会LOGO_white.svg"
+                        src="assets/images/世界道地中药峰会LOGO_white.svg"
                         alt=""
                       />
                     </a>
