完成footer的跳转

--- a/news.html
+++ b/news.html
@@ -349,14 +349,14 @@
                   <div class="contact-ft">
                     <ul>
                       <li>
-                        <a href="project-single.html">
+                        <a href="about.html">
                           <span class="wpo-service-link-widget-text"
                             >关于我们</span
                           >
                         </a>
                       </li>
                       <li>
-                        <a href="project-single.html">
+                        <a href="service.html">
                           <span class="wpo-service-link-widget-text"
                             >标准与理念</span
                           >
@@ -371,14 +371,14 @@
                   <div class="contact-ft">
                     <ul>
                       <li>
-                        <a href="project-single.html">
+                        <a href="project.html">
                           <span class="wpo-service-link-widget-text"
                             >生态公益</span
                           >
                         </a>
                       </li>
                       <li>
-                        <a href="project-single.html">
+                        <a href="news.html">
                           <span class="wpo-service-link-widget-text"
                             >新闻中心</span
                           >
@@ -393,14 +393,14 @@
                   <div class="contact-ft">
                     <ul>
                       <li>
-                        <a href="project-single.html">
+                        <a href="blog.html">
                           <span class="wpo-service-link-widget-text"
                             >合作与加入</span
                           >
                         </a>
                       </li>
                       <li>
-                        <a href="project-single.html">
+                        <a href="contact.html">
                           <span class="wpo-service-link-widget-text"
                             >联系我们</span
                           >
@@ -415,14 +415,14 @@
                   <div class="contact-ft">
                     <ul>
                       <li>
-                        <a href="project-single.html">
+                        <a href="#">
                           <span class="wpo-service-link-widget-text"
                             >收藏网页</span
                           >
                         </a>
                       </li>
                       <li>
-                        <a href="project-single.html">
+                        <a href="#">
                           <span class="wpo-service-link-widget-text"
                             >联系邮箱</span
                           >
