--- a/service.html
+++ b/service.html
@@ -930,20 +930,28 @@
                   <div class="logo widget-title">
                     <a class="logo" href="index.html">
                       <img
-                      src="assets/images/世界道地中药峰会LOGO_white.svg"
-                      alt=""
-                    />
+                        src="assets/images/世界道地中药峰会LOGO_white.svg"
+                        alt=""
+                      />
                     </a>
-                    <span style="
-                    color: var(--text-icon-font-wh-190-anti, rgba(255, 255, 255, 0.90));
-                    color: var(--text-icon-font-wh-190-anti, color(display-p3 1 1 1 / 0.90));
-                    font-size: 20px;
-                    font-style: normal;
-                    font-weight: 700;
-                    line-height: normal;
-                 ">世界道地中药峰会</span>
+                    <span
+                      style="
+                        color: var(
+                          --text-icon-font-wh-190-anti,
+                          rgba(255, 255, 255, 0.9)
+                        );
+                        color: var(
+                          --text-icon-font-wh-190-anti,
+                          color(display-p3 1 1 1 / 0.9)
+                        );
+                        font-size: 20px;
+                        font-style: normal;
+                        font-weight: 700;
+                        line-height: normal;
+                      "
+                      >世界道地中药峰会</span
+                    >
                   </div>
-          
                 </div>
               </div>
               <div class="col col-xl-2 col-lg-2 col-md-3 col-sm-6 col-12">
@@ -951,13 +959,17 @@
                   <div class="contact-ft">
                     <ul>
                       <li>
-                        <a href="project-single.html">
-                          <span class="wpo-service-link-widget-text">关于我们</span>
+                        <a href="about.html">
+                          <span class="wpo-service-link-widget-text"
+                            >关于我们</span
+                          >
                         </a>
                       </li>
                       <li>
-                        <a href="project-single.html">
-                          <span class="wpo-service-link-widget-text">标准与理念</span>
+                        <a href="service.html">
+                          <span class="wpo-service-link-widget-text"
+                            >标准与理念</span
+                          >
                         </a>
                       </li>
                     </ul>
@@ -969,13 +981,17 @@
                   <div class="contact-ft">
                     <ul>
                       <li>
-                        <a href="project-single.html">
-                          <span class="wpo-service-link-widget-text">生态公益</span>
+                        <a href="project.html">
+                          <span class="wpo-service-link-widget-text"
+                            >生态公益</span
+                          >
                         </a>
                       </li>
                       <li>
-                        <a href="project-single.html">
-                          <span class="wpo-service-link-widget-text">新闻中心</span>
+                        <a href="news.html">
+                          <span class="wpo-service-link-widget-text"
+                            >新闻中心</span
+                          >
                         </a>
                       </li>
                     </ul>
@@ -987,13 +1003,17 @@
                   <div class="contact-ft">
                     <ul>
                       <li>
-                        <a href="project-single.html">
-                          <span class="wpo-service-link-widget-text">合作与加入</span>
+                        <a href="blog.html">
+                          <span class="wpo-service-link-widget-text"
+                            >合作与加入</span
+                          >
                         </a>
                       </li>
                       <li>
-                        <a href="project-single.html">
-                          <span class="wpo-service-link-widget-text">联系我们</span>
+                        <a href="contact.html">
+                          <span class="wpo-service-link-widget-text"
+                            >联系我们</span
+                          >
                         </a>
                       </li>
                     </ul>
@@ -1005,37 +1025,38 @@
                   <div class="contact-ft">
                     <ul>
                       <li>
-                        <a href="project-single.html">
-                          <span class="wpo-service-link-widget-text">收藏网页</span>
+                        <a href="#">
+                          <span class="wpo-service-link-widget-text"
+                            >收藏网页</span
+                          >
                         </a>
                       </li>
                       <li>
-                        <a href="project-single.html">
-                          <span class="wpo-service-link-widget-text">联系邮箱</span>
+                        <a href="#">
+                          <span class="wpo-service-link-widget-text"
+                            >联系邮箱</span
+                          >
                         </a>
                       </li>
                     </ul>
                   </div>
                 </div>
               </div>
-
             </div>
           </div>
           <!-- end container -->
         </div>
         <div class="wpo-lower-footer">
-          <div class="container" style="text-align: center;">
+          <div class="container" style="text-align: center">
             <div class="row">
-                <ul>
-                  <li>
-                   <span class="wpo-service-link-widget-text" >
-                    &copy; 2025 世界道地中药高质量发展峰会组委会. 版权所有.  |  
-                    隐私政策  | 服务条款
-                   </span>
-                  </li>
-                  
-                </ul>
-              </div>
+              <ul>
+                <li>
+                  <span class="wpo-service-link-widget-text">
+                    &copy; 2025 世界道地中药高质量发展峰会组委会. 版权所有. |
+                    隐私政策 | 服务条款
+                  </span>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
