--- a/blog.html
+++ b/blog.html
@@ -443,7 +443,7 @@
                   <div class="logo widget-title">
                     <a class="logo" href="index.html">
                       <img
-                        src="assets/images/世界道地中药峰会LOGO_svg 1.svg"
+                        src="assets/images/世界道地中药峰会LOGO_white.svg"
                         alt=""
                       />
                     </a>
@@ -472,14 +472,14 @@
                   <div class="contact-ft">
                     <ul>
                       <li>
-                        <a href="project-single.html">
+                        <a href="about.html">
                           <span class="wpo-service-link-widget-text"
                             >关于我们</span
                           >
                         </a>
                       </li>
                       <li>
-                        <a href="project-single.html">
+                        <a href="service.html">
                           <span class="wpo-service-link-widget-text"
                             >标准与理念</span
                           >
@@ -494,14 +494,14 @@
                   <div class="contact-ft">
                     <ul>
                       <li>
-                        <a href="project-single.html">
+                        <a href="project.html">
                           <span class="wpo-service-link-widget-text"
                             >生态公益</span
                           >
                         </a>
                       </li>
                       <li>
-                        <a href="project-single.html">
+                        <a href="news.html">
                           <span class="wpo-service-link-widget-text"
                             >新闻中心</span
                           >
@@ -516,14 +516,14 @@
                   <div class="contact-ft">
                     <ul>
                       <li>
-                        <a href="project-single.html">
+                        <a href="blog.html">
                           <span class="wpo-service-link-widget-text"
                             >合作与加入</span
                           >
                         </a>
                       </li>
                       <li>
-                        <a href="project-single.html">
+                        <a href="contact.html">
                           <span class="wpo-service-link-widget-text"
                             >联系我们</span
                           >
@@ -538,14 +538,14 @@
                   <div class="contact-ft">
                     <ul>
                       <li>
-                        <a href="project-single.html">
+                        <a href="#">
                           <span class="wpo-service-link-widget-text"
                             >收藏网页</span
                           >
                         </a>
                       </li>
                       <li>
-                        <a href="project-single.html">
+                        <a href="#">
                           <span class="wpo-service-link-widget-text"
                             >联系邮箱</span
                           >
