--- a/contact.html
+++ b/contact.html
@@ -295,7 +295,7 @@
                   <div class="logo widget-title">
                     <a class="logo" href="index.html">
                       <img
-                      src="assets/images/世界道地中药峰会LOGO_white.svg"
+                        src="assets/images/世界道地中药峰会LOGO_white.svg"
                         alt=""
                       />
                     </a>
@@ -324,14 +324,14 @@
                   <div class="contact-ft">
                     <ul>
                       <li>
-                        <a href="project-single.html">
+                        <a href="about.html">
                           <span class="wpo-service-link-widget-text"
                             >关于我们</span
                           >
                         </a>
                       </li>
                       <li>
-                        <a href="project-single.html">
+                        <a href="service.html">
                           <span class="wpo-service-link-widget-text"
                             >标准与理念</span
                           >
@@ -346,14 +346,14 @@
                   <div class="contact-ft">
                     <ul>
                       <li>
-                        <a href="project-single.html">
+                        <a href="project.html">
                           <span class="wpo-service-link-widget-text"
                             >生态公益</span
                           >
                         </a>
                       </li>
                       <li>
-                        <a href="project-single.html">
+                        <a href="news.html">
                           <span class="wpo-service-link-widget-text"
                             >新闻中心</span
                           >
@@ -368,14 +368,14 @@
                   <div class="contact-ft">
                     <ul>
                       <li>
-                        <a href="project-single.html">
+                        <a href="blog.html">
                           <span class="wpo-service-link-widget-text"
                             >合作与加入</span
                           >
                         </a>
                       </li>
                       <li>
-                        <a href="project-single.html">
+                        <a href="contact.html">
                           <span class="wpo-service-link-widget-text"
                             >联系我们</span
                           >
@@ -390,14 +390,14 @@
                   <div class="contact-ft">
                     <ul>
                       <li>
-                        <a href="project-single.html">
+                        <a href="#">
                           <span class="wpo-service-link-widget-text"
                             >收藏网页</span
                           >
                         </a>
                       </li>
                       <li>
-                        <a href="project-single.html">
+                        <a href="#">
                           <span class="wpo-service-link-widget-text"
                             >联系邮箱</span
                           >
