加载效果完成

--- a/about.html
+++ b/about.html
@@ -193,7 +193,7 @@
             <div class="loader-line-mask">
               <div class="loader-line"></div>
             </div>
-            <img src="assets/images/preloader.png" alt="" />
+            <img src="assets/images/世界道地中药峰会LOGO_white.svg" alt="" />
           </div>
         </div>
       </div>
