--- a/index.html
+++ b/index.html
@@ -344,6 +344,19 @@ text-underline-position: from-font;
   <body>
     <!-- start page-wrapper -->
     <div class="page-wrapper">
+            <!-- start preloader -->
+            <div class="preloader">
+              <div class="vertical-centered-box">
+                <div class="content">
+                  <div class="loader-circle"></div>
+                  <div class="loader-line-mask">
+                    <div class="loader-line"></div>
+                  </div>
+                  <img src="assets/images/世界道地中药峰会LOGO_white.svg" alt="" />
+                </div>
+              </div>
+            </div>
+            <!-- end preloader -->
         <!-- Start header -->
         <header id="header">
           <div class="wpo-site-header wpo-header-style-1">
