--- a/news.html
+++ b/news.html
@@ -119,7 +119,7 @@
             <div class="loader-line-mask">
               <div class="loader-line"></div>
             </div>
-            <img src="assets/images/世界道地中药峰会LOGO_svg 1.svg" alt="" />
+            <img src="assets/images/世界道地中药峰会LOGO_white.svg" alt="" />
           </div>
         </div>
       </div>
