--- a/project.html
+++ b/project.html
@@ -117,12 +117,18 @@
         width: 100%;
       }
 
-      .wpo-blog-item-first .bottom-section .describe_card {
+      .wpo-blog-item-first .describe_card {
         flex: 1;
         margin: 0 10px;
         padding: 20px;
         border-radius: 24px;
         background: rgba(255, 255, 255, 0.7);
+
+        /* 毛玻璃效果 */
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+        border: 1px solid rgba(255, 255, 255, 0.2);
+        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
       }
 
       .wpo-blog-item-first .bottom-section .describe_card:first-child {
